--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -3,6 +3,10 @@
   {
     "DefaultConnection":"Data Source=DatingApp.db"
   },
+  "AppSettings":
+  {
+    "Key":"Super Secret Key"
+  },
   "Logging":{
     "LogLevel": {
       "Default": "Warning"
